# Data-Structures-and-Algorithms

./: README.md
0_new_project_CMAKE/: cmake.txt
1_myvector/: CMakeLists.txt
1_nested_loops/: CMakeLists.txt
1_nested_loops/src/: main.cpp
2_linked_list/circular_linked_list/src/: main.cpp
2_linked_list/doubly_linked_list/: CMakeLists.txt
2_linked_list/linear_linked_list/src/: Node.h  main.cpp
2_pointers/: CMakeLists.txt
2_pointers/src/: main  main.cpp
3_myvector_project/src/: MyVector.cpp  MyVector.h  main.cpp
3_stack/: CMakeLists.txt
3_stack/src/: Stack.h  main.cpp
4_linked_list/src/: Node.h  main.cpp
4_queue/DEqueue/: CMakeLists.txt
4_queue/DEqueue/src/: DEQueue.h  main.cpp
4_queue/queue/: CMakeLists.txt
4_queue/queue/src/: Queue.h  main.cpp
4_queue/src/: Queue.h  main.cpp
5_OOP/1_Inheritance/: CMakeLists.txt
5_OOP/1_Inheritance/src/: Base.h  main.cpp
5_OOP/2_Move_Shemnatics/: CMakeLists.txt
5_OOP/2_Move_Shemnatics/src/: main.cpp
5_OOP/2_Move_Shemnatics\/src/: main.cpp
87_for_loop/: CMakeLists.txt
87_for_loop/src/: main.cpp
linked_list/: CMakeLists.txt
linked_list/circular_linked_list/: CMakeLists.txt
linked_list/circular_linked_list/src/: Circular_Node.h  main.cpp
linked_list/doubly_linked_list/src/: D_Node.h  main.cpp
linked_list/linear_linked_list/src/: Node.h  main.cpp
linked_list/src/: Node.h  main.cpp
myvector/src/: MyVector.h
